
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int cmd2 ;
typedef int FILE ;


 int O_CREAT ;
 int O_TRUNC ;
 int O_WRONLY ;
 int close (int) ;
 int fclose (int *) ;
 scalar_t__ fgets (char*,int,int *) ;
 int * fopen (char*,char*) ;
 int getpid () ;
 int open (char*,int,int) ;
 int sprintf (char*,char*,unsigned int,...) ;
 int sscanf (char*,char*,unsigned int*,unsigned int*) ;
 int system (char*) ;
 int trace (char*) ;
 int write (int,unsigned int,unsigned int) ;

void _init()
{
 char cmd[1024], cmd2[1024];
 int fd;
 unsigned int start, stop;
 FILE *f;

 sprintf(cmd, "Starting up: pid %d\n", getpid());
 system("cat /proc/$PPID/maps > /tmp/t");
 trace(cmd);

 f = fopen("/proc/self/maps", "r");
 while(fgets(cmd2, sizeof(cmd2)-1, f)) {
  trace("read: ");
  trace(cmd2);
  sscanf(cmd2,"%08x-%08x \n", &start, &stop);
  sprintf(cmd, "\nStart: %p, Stop: %p\n", start, stop);
  trace(cmd);
  sprintf(cmd, "/tmp/memdump.%p", start);
  trace("saving data to ");
  trace(cmd);
  trace("\n");
  if((fd = open(cmd, O_WRONLY|O_CREAT|O_TRUNC, 0777)) < 0) {
   trace("Unable to open file.\n");
  } else {
   write(fd, start, stop - start);
   close(fd);
  }
 }

 fclose(f);

 trace("\n--> should be done now\n");

}
